edit the mjc_peg_images experiment

--- a/src/3rdparty/CMakeLists.txt
+++ b/src/3rdparty/CMakeLists.txt
@@ -24,8 +24,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin CACHE PATH "Output di
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 find_package(Boost COMPONENTS python REQUIRED)
-find_package(PythonLibs 2.7 REQUIRED)
-find_package(Numpy)
+find_package(PythonLibs 2.7.12 EXACT REQUIRED)
+# find_package(Numpy)
 
 include(${CMAKE_SOURCE_DIR}/cmake/boost-python.cmake)
 
